# mockworld

./: CITATION.cff  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  SPEC.md  pyproject.toml
.github/: good-first-issues.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  AUTHORING.md  DELIVERY-PLAN.md  PRD.md  RESEARCH.md  TEST-PLAN.md
examples/demos/: exactly_once_under_chaos.py
examples/registry/: registry.json
examples/registry/mocks/weather/: fidelity.md  handlers.py  mock.yaml  seed.py
examples/worlds/: ecommerce.yaml
src/mockworld/: __init__.py  cli.py  control.py  datagen.py  determinism.py  dispatch.py  engine.py  errors.py  faults.py  handler_ctx.py  loader.py  pytest_plugin.py  record.py  registry.py  scaffold.py  schema.py  server.py  session.py  snapshot.py  state.py  swarm.py  trace.py  validate.py  verify.py  world.py
src/mockworld/mocks/crm/: fidelity.md  handlers.py  mock.yaml  seed.py
src/mockworld/mocks/email/: fidelity.md  handlers.py  mock.yaml  seed.py
src/mockworld/mocks/exchange/: fidelity.md  handlers.py  mock.yaml  seed.py
src/mockworld/mocks/files/: fidelity.md  handlers.py  mock.yaml  seed.py
src/mockworld/mocks/hello/: fidelity.md  handlers.py  mock.yaml  seed.py
src/mockworld/mocks/payments/: fidelity.md  handlers.py  mock.yaml  seed.py
tests/: conftest.py  test_demo.py  test_determinism.py  test_dx.py  test_e2e.py  test_faults.py  test_isolation.py  test_mcp_integration.py  test_record.py  test_record_har.py  test_registry.py  test_snapshot_scenario.py  test_state_snapshot.py  test_swarm.py  test_validate.py  test_verify.py  test_world.py
